ACTUALIZACIÓN DEL POM